--- a/index.html
+++ b/index.html
@@ -1,46 +1,210 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-<meta charset="UTF-8">
-<title>Terra do Sol - Parquinho</title>
-<link rel="stylesheet" href="style.css">
-<link rel="manifest" href="manifest.json">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Parquinho App - Terra do Sol</title>
+
+  <link rel="manifest" href="manifest.json" />
+  <link rel="stylesheet" href="css/style.css" />
+
+  <!-- QRCode + jsQR -->
+  <script src="https://cdn.jsdelivr.net/npm/qrcode/build/qrcode.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.min.js"></script>
 </head>
 <body>
-<header>
-  <img src="icon-192.png" class="logo">
-  <h1>Terra do Sol - Parquinho Infantil</h1>
-</header>
+  <header>
+    <div class="brand">
+      <img alt="logo" id="appLogo" src="assets/img/logo-terra-do-sol.png" />
+      <h1 id="appTitle">Parquinho App - Terra do Sol</h1>
+    </div>
+    <nav>
+      <button data-tab="cadastro" class="active">Cadastro</button>
+      <button data-tab="busca">Busca</button>
+      <button data-tab="historico">Histórico</button>
+      <button data-tab="marketing">Marketing</button>
+      <button data-tab="impressao">Impressão</button>
+    </nav>
+  </header>
 
-<nav>
-  <button onclick="openTab('cadastro')">Cadastro</button>
-  <button onclick="openTab('impressao')">Impressão</button>
-</nav>
+  <main>
+    <!-- CADASTRO -->
+    <section id="cadastro" class="tab active">
+      <form id="formCadastro" autocomplete="off">
+        <label>Nome completo (criança):
+          <input type="text" name="nome" required />
+        </label>
 
-<main>
-  <section id="cadastro" class="tab active">
-    <h2>Cadastrar Criança</h2>
-    <form id="formCadastro">
-      <label>Nome</label>
-      <input id="nome">
-      <label>Responsável</label>
-      <input id="responsavel">
-      <label>Telefone</label>
-      <input id="telefone">
-      <button type="button" onclick="salvar()">Salvar</button>
-    </form>
-    <div id="qrArea"></div>
-  </section>
+        <label>Data de nascimento:
+          <input type="date" name="dataNascimento" required />
+        </label>
 
-  <section id="impressao" class="tab">
-    <h2>Impressão e Relatórios</h2>
-    <label>Filtrar por data:</label>
-    <input type="date" id="filtroData" onchange="carregarLista()">
-    <ul id="lista"></ul>
-    <button onclick="imprimir()">Imprimir Lista</button>
-  </section>
-</main>
+        <label>Idade:
+          <input type="number" name="idade" readonly />
+        </label>
 
-<script src="app.js"></script>
+        <label>Nome do responsável:
+          <input type="text" name="responsavel" placeholder="Nome do responsável" />
+        </label>
+
+        <label>Telefone do responsável:
+          <input type="tel" name="telefone" placeholder="+55..." />
+        </label>
+
+        <label>Email:
+          <input type="email" name="email" />
+        </label>
+
+        <label>Setor da barraca:
+          <select name="setor">
+            <option value="salão">Salão</option>
+            <option value="coqueiro">Coqueiro</option>
+            <option value="guarda-sol">Guarda-sol</option>
+          </select>
+        </label>
+
+        <label>Mesa (ex: Mesa 12 / A5):
+          <input type="text" name="mesa" />
+        </label>
+
+        <label>Possui alergia?
+          <select name="temAlergia" id="temAlergia">
+            <option value="nao">Não</option>
+            <option value="sim">Sim</option>
+          </select>
+        </label>
+
+        <label id="alergiaLabel" style="display:none">Qual alergia?
+          <input type="text" name="qualAlergia" />
+        </label>
+
+        <label>Altura:
+          <select name="altura" id="alturaSelect">
+            <option value="menor">Menor que 1 metro</option>
+            <option value="maior">Maior que 1 metro</option>
+          </select>
+        </label>
+
+        <label>Sai sozinho?
+          <select name="saiSozinho" id="saiSozinhoSelect">
+            <option value="nao">Não</option>
+            <option value="sim">Sim</option>
+          </select>
+        </label>
+
+        <!-- badge que mostra cor da pulseira ao vivo -->
+        <div style="margin-top:8px">
+          <span id="liveBadge" class="badge red">NÃO SAI SOZINHO</span>
+        </div>
+
+        <label>Observações:
+          <textarea name="observacoes"></textarea>
+        </label>
+
+        <div class="row">
+          <button type="submit" id="btnCadastrar">Cadastrar</button>
+          <button type="button" id="btnGerarTodosQR">Gerar QR de todos</button>
+        </div>
+      </form>
+
+      <div id="resultCadastro" class="card">
+        <h3>Último QR gerado</h3>
+        <div id="qrCodeCadastro"></div>
+        <div class="row">
+          <button id="btnDownloadQR">Baixar QR</button>
+          <button id="btnPrintLabel">Imprimir etiqueta (4x4cm)</button>
+          <button id="btnPrintLabelSmall">Imprimir etiqueta pequena</button>
+        </div>
+      </div>
+
+      <hr />
+
+      <div id="cameraControls" class="card">
+        <h3>Leitor de QR (Câmera) — Modo: BOTÃO (Opção B)</h3>
+        <div class="row">
+          <button id="btnStartCamera">Abrir câmera</button>
+          <button id="btnStopCamera" disabled>Fechar câmera</button>
+          <button id="btnScanNow" disabled>Escanear QR (ler agora)</button>
+          <button id="btnRegistrarManual">Registrar Manual</button>
+        </div>
+
+        <div id="videoWrap">
+          <video id="video" autoplay playsinline></video>
+          <canvas id="scanCanvas" hidden></canvas>
+        </div>
+        <div id="scanMessage" style="margin-top:8px"></div>
+      </div>
+    </section>
+
+    <!-- BUSCA -->
+    <section id="busca" class="tab">
+      <input type="text" id="inputBusca" placeholder="Buscar por nome, telefone, mesa ou pulseira..." />
+      <ul id="listaBusca"></ul>
+    </section>
+
+    <!-- HISTÓRICO -->
+    <section id="historico" class="tab">
+      <h2>Histórico de Cadastros e Movimentações</h2>
+      <div id="listaHistoricoContainer"></div>
+      <div class="row">
+        <button id="btnExportJSON">Exportar JSON</button>
+        <button id="btnLimparTudo">Limpar tudo (apagar local)</button>
+      </div>
+    </section>
+
+    <!-- MARKETING -->
+    <section id="marketing" class="tab">
+      <h2>Marketing & Contatos</h2>
+
+      <div class="card">
+        <h4>Mensagem / Promoção</h4>
+        <textarea id="marketingMessage" placeholder="Escreva a mensagem a enviar..."></textarea>
+        <label>Anexar imagem (opcional):
+          <input type="file" id="marketingImage" accept="image/*" />
+        </label>
+        <div class="row">
+          <button id="btnSelectAll">Selecionar todos</button>
+          <button id="btnClearAll">Limpar seleção</button>
+          <button id="btnSendToSelected">Enviar para selecionados</button>
+        </div>
+      </div>
+
+      <div class="card" id="marketingListWrapper">
+        <h4>Lista de clientes (todos os cadastros)</h4>
+        <div id="marketingList"></div>
+      </div>
+    </section>
+
+    <!-- IMPRESSÃO -->
+    <section id="impressao" class="tab">
+      <h2>Impressão</h2>
+
+      <div class="card">
+        <div class="row">
+          <label>Filtro rápido:
+            <select id="quickFilter">
+              <option value="hoje">Hoje</option>
+              <option value="ontem">Ontem</option>
+              <option value="ult7">Últimos 7 dias</option>
+              <option value="mesAtual">Mês atual</option>
+              <option value="intervalo">Intervalo...</option>
+            </select>
+          </label>
+          <label>Data inicial:
+            <input type="date" id="filterFrom" />
+          </label>
+          <label>Data final:
+            <input type="date" id="filterTo" />
+          </label>
+          <button id="btnFiltrar">Filtrar</button>
+          <button id="btnImprimirFiltro">Imprimir Lista de Cadastros</button>
+        </div>
+      </div>
+
+      <div id="relatorioPreview" class="card"></div>
+    </section>
+  </main>
+
+  <script src="js/script.js"></script>
 </body>
 </html>
