--- a/index.html
+++ b/index.html
@@ -1,61 +1,104 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8" />
-  <title>Escala Terra do Sol</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Escala — Ajudantes</title>
+    <link rel="stylesheet" href="style.css" />
 </head>
+
 <body>
 
-<header class="app-header">
-  <div class="logo-mini"><span>🌞</span></div>
-  <div class="title-group">
-    <h1>Terra do Sol</h1>
-    <p>Escala de Almoço, Lanche e Aparadores</p>
-  </div>
+<header class="topbar">
+    <h1 class="topbar-title">Escala — Ajudantes</h1>
 </header>
 
-<nav class="tabs">
-  <button class="tab-button active" data-target="section-equipe">Equipe</button>
-  <button class="tab-button" data-target="section-dia">Escala do Dia</button>
-  <button class="tab-button" data-target="section-semana">Semana</button>
-  <button class="tab-button" data-target="section-historico">Histórico</button>
-  <button class="tab-button" data-target="section-config">Configurações</button>
-</nav>
+<main class="container">
 
-<main>
-  
-  <!-- EQUIPE -->
-  <section id="section-equipe" class="tab-section active">
-    <h2>Cadastro de Equipe</h2>
+<section class="tabs">
+    <button class="tab-btn active" data-tab="colaboradores">Colaboradores</button>
+    <button class="tab-btn" data-tab="escala">Escala</button>
+    <button class="tab-btn" data-tab="funcoes">Funções</button>
+</section>
 
-    <form id="form-add-funcionario" class="card">
-      <label for="nome-funcionario">Nome do colaborador</label>
-      <div class="inline-form">
-        <input type="text" id="nome-funcionario" placeholder="Ex: João, Maria..." required />
-        <button type="submit">Adicionar</button>
-      </div>
-    </form>
+<!-- ============================
+     TAB: COLABORADORES
+============================= -->
+<section class="tab-content active" id="colaboradores">
 
     <div class="card">
-      <div class="card-header-row">
-        <h3>Lista de colaboradores</h3>
-        <span id="total-funcionarios" class="badge">0</span>
-      </div>
-      <ul id="lista-funcionarios" class="list"></ul>
+        <h2>Cadastro de Colaboradores</h2>
+
+        <div class="field-row">
+            <input id="nomeColaborador" class="input" placeholder="Nome do colaborador" />
+            <button id="btnAddColaborador" class="primary">Adicionar</button>
+        </div>
+
+        <div id="listaColaboradores" class="colab-list"></div>
     </div>
 
-  </section>
+</section>
 
-  <!-- OUTRAS TELAS (NÃO ALTERADAS) -->
-  <section id="section-dia" class="tab-section">
-    <h2>Escala do Dia</h2>
-    <p style="color: #666;">(restante do app permanece igual)</p>
-  </section>
+<!-- ============================
+     TAB: FUNÇÕES (HTML ESTÁTICO)
+============================= -->
+<section class="tab-content" id="funcoes">
+
+    <div class="card funcao-card">
+        <h2>Almoço 1</h2>
+
+        <div class="funcao-controls">
+            <input type="number" min="1" value="1" class="quantidade-funcao" />
+            <button class="mark-all-btn secondary">Marcar todos</button>
+            <button class="unmark-all-btn secondary">Desmarcar</button>
+        </div>
+
+        <ul class="colaboradores-lista-selecao" data-funcao="almoco1"></ul>
+    </div>
+
+    <div class="card funcao-card">
+        <h2>Almoço 2</h2>
+
+        <div class="funcao-controls">
+            <input type="number" min="1" value="1" class="quantidade-funcao" />
+            <button class="mark-all-btn secondary">Marcar todos</button>
+            <button class="unmark-all-btn secondary">Desmarcar</button>
+        </div>
+
+        <ul class="colaboradores-lista-selecao" data-funcao="almoco2"></ul>
+    </div>
+
+    <div class="card funcao-card">
+        <h2>Lanche</h2>
+
+        <div class="funcao-controls">
+            <input type="number" min="1" value="1" class="quantidade-funcao" />
+            <button class="mark-all-btn secondary">Marcar todos</button>
+            <button class="unmark-all-btn secondary">Desmarcar</button>
+        </div>
+
+        <ul class="colaboradores-lista-selecao" data-funcao="lanche"></ul>
+    </div>
+
+</section>
+
+<!-- ============================
+     TAB: GERAR ESCALA
+============================= -->
+<section class="tab-content" id="escala">
+
+    <div class="card">
+        <h2>Gerar Escala</h2>
+        <button id="btnGerarEscala" class="primary full">Gerar</button>
+    </div>
+
+    <div id="previewEscala"></div>
+
+</section>
 
 </main>
 
 <script src="script.js"></script>
+
 </body>
 </html>
