--- a/index.html
+++ b/index.html
@@ -1,24 +1,43 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="utf-8" />
   <title>Escala Terra do Sol</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header class="app-header">
-    <div class="logo-mini">
-      <span>🌞</span>
+
+<!-- LOGIN -->
+<div id="login-screen" class="login-screen">
+  <div class="login-box">
+    <div class="login-logo">🌞</div>
+    <h1>Terra do Sol</h1>
+    <p class="muted">Acesso restrito ao sistema de escalas</p>
+    <input id="login-password" type="password" placeholder="Digite a senha" />
+    <div class="login-actions">
+      <button id="btn-login" class="primary">Entrar</button>
     </div>
-    <div class="title-group">
-      <h1>Terra do Sol</h1>
-      <p>Escala de Almoço, Lanche e Aparadores</p>
+    <p class="login-info">Senha padrão: <strong>supertds</strong></p>
+  </div>
+</div>
+
+<!-- APP -->
+<div id="app" class="app" style="display:none;">
+
+  <header class="app-header center">
+    <div class="header-top-line"></div>
+    <div class="header-content">
+      <div class="logo-big">🌞</div>
+      <h1 class="brand">Terra do Sol</h1>
+      <p class="subtitle">ESCALA OPERACIONAL</p>
+      <p class="date-line" id="header-date">—</p>
     </div>
   </header>
 
   <nav class="tabs">
-    <button class="tab-button active" data-target="section-equipe">Equipe</button>
+    <button class="tab-button active" data-target="section-dashboard">Dashboard</button>
+    <button class="tab-button" data-target="section-equipe">Equipe</button>
     <button class="tab-button" data-target="section-dia">Escala do Dia</button>
     <button class="tab-button" data-target="section-semana">Semana</button>
     <button class="tab-button" data-target="section-historico">Histórico</button>
@@ -26,27 +45,43 @@
   </nav>
 
   <main>
+    <!-- DASHBOARD -->
+    <section id="section-dashboard" class="tab-section active">
+      <h2>Dashboard Geral</h2>
+      <div class="dashboard-grid">
+        <div class="dash-card">
+          <div class="dash-title">Total de Colaboradores</div>
+          <div id="db-total-func" class="dash-number">0</div>
+        </div>
+        <div class="dash-card">
+          <div class="dash-title">Escalas Salvas</div>
+          <div id="db-total-hist" class="dash-number">0</div>
+        </div>
+        <div class="dash-card">
+          <div class="dash-title">Última Escala</div>
+          <div id="db-ultima-data" class="dash-number-small">—</div>
+        </div>
+      </div>
+    </section>
+
     <!-- EQUIPE -->
-    <section id="section-equipe" class="tab-section active">
+    <section id="section-equipe" class="tab-section">
       <h2>Cadastro de Equipe</h2>
-      <form id="form-add-funcionario" class="card">
+
+      <form id="form-add-funcionario" class="card form-card">
         <label for="nome-funcionario">Nome do colaborador</label>
         <div class="inline-form">
           <input type="text" id="nome-funcionario" placeholder="Ex: João, Maria..." required />
-          <button type="submit">Adicionar</button>
+          <button type="submit" class="primary">Adicionar</button>
         </div>
       </form>
 
       <div class="card">
         <div class="card-header-row">
           <h3>Lista de colaboradores</h3>
-          <span id="total-funcionarios" class="badge">0</span>
+          <span id="total-funcionarios" class="pill">0</span>
         </div>
         <ul id="lista-funcionarios" class="list"></ul>
-        <p class="tip">
-          Dica: cadastre todos os ajudantes, garçons e apoio da barraca.  
-          Depois, na aba <strong>Escala do Dia</strong>, você marca quem está presente.
-        </p>
       </div>
     </section>
 
@@ -54,23 +89,28 @@
     <section id="section-dia" class="tab-section">
       <h2>Escala do Dia</h2>
 
-      <div class="card">
-        <label for="data-dia">Data da escala</label>
-        <input type="date" id="data-dia" />
+      <div class="grid-2">
+        <div class="card">
+          <label for="data-dia">Data da escala</label>
+          <input type="date" id="data-dia" />
+        </div>
+
+        <div class="card">
+          <label>Controles</label>
+          <div class="actions-row">
+            <button id="btn-gerar-dia" class="primary">Gerar escala</button>
+            <button id="btn-salvar-dia" class="secondary" disabled>Salvar</button>
+            <button id="btn-imprimir-dia" class="primary" disabled>Imprimir</button>
+          </div>
+        </div>
       </div>
 
       <div class="card">
         <div class="card-header-row">
           <h3>Quem está presente hoje?</h3>
-          <span id="total-presentes" class="badge">0</span>
+          <span id="total-presentes" class="pill">0</span>
         </div>
         <ul id="lista-presenca" class="list"></ul>
-        <p class="tip">Marque apenas quem está trabalhando nesse dia.</p>
-      </div>
-
-      <div class="actions-row">
-        <button id="btn-gerar-dia" class="primary">Gerar escala do dia</button>
-        <button id="btn-salvar-dia" class="secondary" disabled>Salvar no histórico</button>
       </div>
 
       <section class="card preview-card">
@@ -78,21 +118,21 @@
         <div id="preview-dia" class="preview-area empty">
           <p>Nenhuma escala gerada ainda.</p>
         </div>
-        <button id="btn-imprimir-dia" class="primary" disabled>Imprimir / PDF</button>
       </section>
     </section>
 
     <!-- ESCALA DA SEMANA -->
     <section id="section-semana" class="tab-section">
       <h2>Escala da Semana</h2>
+
       <div class="card">
         <label for="data-semana">Data inicial</label>
         <input type="date" id="data-semana" />
-        <p class="tip">O app gera 7 dias a partir dessa data.</p>
-      </div>
-
-      <div class="actions-row">
-        <button id="btn-gerar-semana" class="primary">Gerar escala da semana</button>
+        <p class="tip">Gera 7 dias a partir dessa data.</p>
+        <div class="actions-row" style="margin-top:10px;">
+          <button id="btn-gerar-semana" class="primary">Gerar semana</button>
+          <button id="btn-imprimir-semana" class="primary" disabled>Imprimir semana</button>
+        </div>
       </div>
 
       <section class="card preview-card">
@@ -100,7 +140,6 @@
         <div id="preview-semana" class="preview-area empty">
           <p>Nenhuma escala semanal gerada ainda.</p>
         </div>
-        <button id="btn-imprimir-semana" class="primary" disabled>Imprimir semana</button>
       </section>
     </section>
 
@@ -109,45 +148,43 @@
       <h2>Histórico de Escalas</h2>
       <div class="card">
         <ul id="lista-historico" class="list"></ul>
-        <p class="tip">
-          Aqui ficam as escalas salvas.  
-          Você pode reabrir para visualizar e imprimir novamente.
-        </p>
       </div>
       <div class="actions-row">
         <button id="btn-apagar-historico" class="danger">Apagar todo histórico</button>
       </div>
     </section>
 
-    <!-- CONFIGURAÇÕES -->
+    <!-- CONFIG -->
     <section id="section-config" class="tab-section">
       <h2>Configurações</h2>
 
       <div class="card">
         <h3>Logo da barraca</h3>
-        <p>Escolha a imagem que vai sair no topo da impressão.</p>
         <input type="file" id="input-logo" accept="image/*" />
-        <div class="logo-preview-wrapper">
-          <div id="logo-preview-container" class="logo-preview">
-            <p>Nenhuma logo selecionada.</p>
-          </div>
+        <div id="logo-preview-container" class="logo-preview"></div>
+        <div style="margin-top:8px;">
+          <button id="btn-remover-logo" class="secondary">Remover logo</button>
         </div>
-        <button id="btn-remover-logo" class="secondary">Remover logo</button>
       </div>
 
       <div class="card">
         <h3>Rodízio</h3>
-        <p>
-          O app faz rodízio automático para não repetir sempre as mesmas pessoas nas mesmas funções.
-        </p>
+        <p class="tip">Controla o deslocamento do rodízio automático.</p>
         <button id="btn-reset-rodizio" class="secondary">Resetar rodízio</button>
+      </div>
+
+      <div class="card">
+        <h3>Conta</h3>
+        <button id="btn-logout" class="danger">Sair do aplicativo</button>
       </div>
     </section>
   </main>
 
-  <!-- ÁREA DE IMPRESSÃO (dia ou semana) -->
-  <div id="print-area"></div>
+</div>
 
-  <script src="script.js"></script>
+<!-- Área para impressão (injetada dinamicamente) -->
+<div id="print-area"></div>
+
+<script src="script.js"></script>
 </body>
 </html>
